# website-generator

./: .gitattributes  .gitignore  .pylintrc  ARCHITECTURE.md  CONTRIBUTING.md  ContentProcessor.py  FINAL_PLAN.md  README.md  cli.py  code.css  config.yaml  conftest.py  dev.py  main.md  main.py  page.py  pyproject.toml  requirements.txt  style.css  theme.settings.yaml
.github/workflows/: pylint.yml  tests.yml
core/: assets.py  bootstrap.py  build_context.py  composition.py  config.py  config_schema.py  content_models.py  exporting.py  frontend_manager.py  page.py  plugin_manager.py  presentation.py  project.py  router.py  runtime_manager.py  site.py  starters.py  theme_manager.py
docs/: DEVELOPER_GUIDE.md  EXTENSION_AUTHOR_GUIDE.md  USER_GUIDE.md
docs/api/: classes.md  index.md
docs/developer/: DEVELOPER_GUIDE.md  EXTENSION_AUTHOR_GUIDE.md  RELEASE_CHECKLIST.md  RUNTIME_INTEGRATION_GUIDE.md  THEME_AUTHOR_GUIDE.md
docs/developer/modules/: core-config.md  core-extension-manager.md  core-page.md  core-plugin-manager.md  core-project.md  core-site.md  engines-base-engine.md
docs/examples/: LAUNCH_KIT.md  creating-themes.md  writing-plugins.md
docs/user/: MIGRATION_GUIDE.md  USER_GUIDE.md  troubleshooting.md
engines/: base_engine.py  django_engine.py  factory.py
extensions/: base.py
extensions/wg_commerce/: extension.py  wg-extension.yaml
extensions/wg_commerce/templates/blocks/commerce/: cart.html  checkout_button.html  order_status.html
extensions/wg_seo/: extension.py
extensions/wg_sitemap/: extension.py  wg-extension.yaml
output/: index.html  sitemap.xml
output/blog/: index.html
output/blog/project-design/: index.html
output/sample-product/: index.html
output/styles/: tailwind.input.css  theme-base.css  theme.css
plugins/: base_plugin.py  blog_indexer.py  collection_indexer.py  frontend_customizer.py  keywords_extractor.py  sitemap_generator.py  special_pages_plugin.py  test_plugin_a.py  test_plugin_b.py
processor/: base_processor.py  factory.py  markdown_processor.py  react_processor.py  tailwind_processor.py
react-app/: next.config.js  package-lock.json  package.json
react-app/pages/: [...slug].jsx  index.jsx
react-app/public/data/: page.json  site.json
react-app/public/data/blog-indexer/: page.json
react-app/public/data/blog/project-design/: page.json
react-app/public/data/shop/sample-product/: page.json
react-app/styles/: globals.css
scripts/: install_editable.py
site-theme/styles/: overrides.css
source/: index.md  main.md  order-failure.md  order-status.md  order-success.md
source/blogs/: main.md  post001.md
source/shop/: copper-tea-tray.md  saffron-gift-box.md  sample-product.md
styles/: styles.css  tailwind.css
templates/blog-template/: blog-indexer.html  post.html
templates/blog-theme/: base.html  blog-indexer.html  post.html
templates/blog-theme/partials/: header.html
templates/shop-theme/: base.html  blog-indexer.html  post.html
templates/shop-theme/partials/: header.html
tests/: conftest.py  support_plugins.py  test_characterization_build.py  test_cli.py  test_collections.py  test_composition.py  test_config.py  test_frontend_hooks_and_export.py  test_incremental_cache.py  test_platform_extensions.py  test_react_integration.py  test_runtime_admin.py  test_runtime_django.py  test_runtime_mock.py  test_theme_system.py
tests/fakes/: in_memory_fs.py
tests/golden/: demo_output_manifest.json
themes/docs-basic/: theme.yaml
themes/docs-basic/blocks/: cta.html  faq.html  feature_grid.html  gallery.html  hero.html  rich_text.html
themes/docs-basic/layouts/: 404.html  base.html  collection.html  document.html
themes/docs-basic/partials/: footer.html  header.html
themes/docs-basic/styles/: base.css
themes/editorial-ledger/: theme.yaml
themes/editorial-ledger/blocks/: cta.html  faq.html  feature_grid.html  hero.html
themes/editorial-ledger/layouts/: 404.html  base.html  collection.html  document.html
themes/editorial-ledger/partials/: footer.html  header.html
themes/editorial-ledger/styles/: base.css
themes/midnight-zine/: theme.yaml
themes/midnight-zine/blocks/: cta.html  feature_grid.html  gallery.html  hero.html
themes/midnight-zine/layouts/: 404.html  base.html  collection.html  document.html
themes/midnight-zine/partials/: footer.html  header.html
themes/midnight-zine/styles/: base.css
themes/minimal-blog/: theme.yaml
themes/minimal-blog/blocks/: cta.html  feature_grid.html  hero.html  rich_text.html
themes/minimal-blog/blocks/minimal-blog/: spotlight.html
themes/minimal-blog/layouts/: 404.html  base.html  collection.html  document.html  product.html
themes/minimal-blog/partials/: footer.html  header.html
themes/sunlit-notes/: theme.yaml
themes/sunlit-notes/blocks/: cta.html  feature_grid.html  hero.html
themes/sunlit-notes/layouts/: 404.html  base.html  collection.html  document.html
themes/sunlit-notes/partials/: footer.html  header.html
themes/sunlit-notes/styles/: base.css
utils/: fs_manager.py  logging_setup.py
wg_contracts/: __init__.py  integrations.py  ports.py
wg_runtime/: __init__.py  db.sqlite3  middleware.py  mock_server.py  settings.py  urls.py  wsgi.py
wg_runtime/runtime/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
wg_runtime/runtime/integrations/: context.py  contracts.py  outbox.py  registry.py  services.py
wg_runtime/runtime/management/commands/: bootstrap_runtime_roles.py
wg_runtime/runtime/migrations/: 0001_initial.py  0002_inventory_adjustment_and_media_file.py  0004_rename_runtime_inte_status_21a195_idx_runtime_int_status_1cce68_idx_and_more.py
