[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "website-generator"
version = "0.2.0"
description = "Developer-first static website generator with theme packages and deep customization."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Artin Mobasher" }
]
keywords = ["static-site-generator", "python", "blog", "themes", "markdown"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: Django",
  "Topic :: Internet :: WWW/HTTP :: Site Management",
]
dependencies = [
  "asgiref==3.8.1",
  "beautifulsoup4==4.12.3",
  "celery==5.4.0",
  "colorama==0.4.6",
  "colorlog==6.10.1",
  "Django==5.2.1",
  "djangorestframework==3.17.1",
  "Markdown==3.8",
  "Pygments==2.19.1",
  "python-slugify==8.0.4",
  "PyYAML==6.0.2",
  "redis==5.2.1",
]

[project.urls]
Homepage = "https://github.com/artart222/website-generator"
Repository = "https://github.com/artart222/website-generator"
Issues = "https://github.com/artart222/website-generator/issues"

[project.optional-dependencies]
dev = [
  "pytest==8.4.1",
  "pytest-mock==3.14.1",
  "pylint>=2.17,<3",
  "ruff>=0.0.280,<0.0.400",
  "mypy>=1.9,<2",
]

[project.scripts]
wg = "cli:main"

[tool.setuptools]
py-modules = ["cli", "main", "dev"]

[tool.setuptools.packages.find]
include = ["core*", "engines*", "plugins*", "processor*", "utils*", "extensions*", "wg_runtime*"]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [".git", "build", "dist", "output", ".venv", "venv", "node_modules"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
files = ["core", "wg_runtime", "extensions", "plugins"]
