[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "website-generator"
version = "0.2.0"
description = "Developer-first static website generator with theme packages and deep customization."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Artin Mobasher" }
]
keywords = ["static-site-generator", "python", "blog", "themes", "markdown"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: Django",
  "Topic :: Internet :: WWW/HTTP :: Site Management",
]
dependencies = [
  "wg-contracts==0.2.0",
  "wg-core==0.2.0",
  "wg-runtime==0.2.0",
  "wg-commerce==0.2.0",
]

[project.urls]
Homepage = "https://github.com/artart222/website-generator"
Repository = "https://github.com/artart222/website-generator"
Issues = "https://github.com/artart222/website-generator/issues"

[project.optional-dependencies]
dev = [
  "pytest==8.4.1",
  "pytest-mock==3.14.1",
  "pytest-django==4.9.0",
  "pylint>=3.3,<4",
  "pylint-django>=2.6,<3",
  "ruff>=0.0.280,<0.0.400",
  "mypy>=1.9,<2",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "wg_runtime.settings"
pythonpath = ["."]
testpaths = ["tests"]

[project.scripts]
wg = "cli:main"

[tool.setuptools]
py-modules = ["cli", "main", "dev"]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [".git", "build", "dist", "output", ".venv", "venv", "node_modules", "packages/*/build", "packages/*/dist"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
files = ["packages/wg-core/core", "packages/wg-runtime/wg_runtime", "packages/wg-commerce/wg_commerce", "packages/wg-core/plugins"]
